@@ -5,6 +5,7 @@ import { ScreenHelper } from '@helpers/screenhelper/screen.helper';
 import { Invoice } from '@objects/invoice';
 import { ScreenService } from '@services/general/screen.service';
 import { AuthInvoiceContributorService } from '@services/http/auth-store/contributor/auth-invoice-contributor.service';
+import { SharedNavbarService } from '@services/shared/shared-nav-bar.service';
 import { interval, Subject, Subscription } from 'rxjs';
 import { finalize, switchMap, takeUntil } from 'rxjs/operators';
 
@@ -16,6 +17,7 @@ import { finalize, switchMap, takeUntil } from 'rxjs/operators';
 export class AllInvoicesComponent implements OnInit {
   allInvoices = [];
   keyword: string = '';
+  page: number = 1;
   selectedTab: string = 'new';
   isHelpModalOpened: boolean;
   isModifyInvoiceModalOpened: boolean;
@@ -24,6 +26,10 @@ export class AllInvoicesComponent implements OnInit {
   loading: WsLoading = new WsLoading;
   _statusColumns = sessionStorage.getItem('shownStatusColumns') || '["new", "paid", "in_progress", "delivered"]';
   statusColumns = JSON.parse(this._statusColumns);
+  numberOfAllItems = 0;
+  numberOfCurrentTotalItems = 0;
+  isNavOpen: Boolean = false;
+  currentPage: number = 1;
   numberOfNewInvoices: number = 0;
   numberOfPaidInvoices: number = 0;
   numberOfInProgressInvoices: number = 0;
@@ -33,7 +39,8 @@ export class AllInvoicesComponent implements OnInit {
   isMobileSize: boolean;
   constructor(private authInvoiceControbutorService: AuthInvoiceContributorService, private ref: ChangeDetectorRef,
     private router: Router, private route: ActivatedRoute,
-    private screenService: ScreenService
+    private screenService: ScreenService,
+    private sharedNavbarService: SharedNavbarService
     ) { 
     this.allInvoices = this.authInvoiceControbutorService.allInvoices;
   }
@@ -41,12 +48,11 @@ export class AllInvoicesComponent implements OnInit {
     this.isMobileSize = ScreenHelper.isMobileSize();
     this.selectedTab = this.route.snapshot.queryParams['tab'] || 'new';
     this.keyword = this.route.snapshot.queryParams['s_keyword'] || '';
-    this.getInvoices();
     this.route.queryParams.pipe(takeUntil(this.ngUnsubscribe)).subscribe(queryParams => {
       this.selectedTab = queryParams['tab'] || 'new';
       this.keyword = queryParams['s_keyword'] || '';
-      this.loading.start();
-      this.getInvoices();
+      this.page = queryParams['page'] || 1;
+      this.getInvoices(true);
     });
     this.authInvoiceControbutorService.refreshInvoices.pipe(takeUntil(this.ngUnsubscribe)).subscribe(result => {
       if (result) {
@@ -59,6 +65,11 @@ export class AllInvoicesComponent implements OnInit {
     if (this.refreshInvoicesInterval) {
       this.refreshInvoicesInterval.unsubscribe();
     }
+    this.sharedNavbarService.isNavSubject.pipe(takeUntil(this.ngUnsubscribe))
+      .subscribe(res => {
+        this.isNavOpen = res;
+        this.ref.detectChanges();
+      });
     this.refreshInvoices();
   }
   getInvoices(loading=false) {
@@ -66,10 +77,12 @@ export class AllInvoicesComponent implements OnInit {
     if (loading) {
       this.loading.start();
     }
-    this.authInvoiceControbutorService.getInvoices({statuses, keyword: this.keyword}).pipe(takeUntil(this.ngUnsubscribe), finalize(() => this.loading.stop())).subscribe(result => {
+    this.authInvoiceControbutorService.getInvoices({statuses, keyword: this.keyword, page: this.page}).pipe(takeUntil(this.ngUnsubscribe), finalize(() => this.loading.stop())).subscribe(result => {
       if (result) {
         this.allInvoices = result['result'];
         if (result['meta']) {
+          this.numberOfAllItems = result['meta']['numberOfTotal'];
+          this.numberOfCurrentTotalItems = result['meta']['numberOfTotal'];
           this.numberOfNewInvoices = result['meta']['numberOfNewInvoices'];
           this.numberOfPaidInvoices = result['meta']['numberOfPaidInvoices'];
           this.numberOfInProgressInvoices = result['meta']['numberOfInProgressInvoices'];
@@ -83,9 +96,11 @@ export class AllInvoicesComponent implements OnInit {
       let statuses = this.selectedTab == 'all' ? this.statusColumns: [this.selectedTab];
       return this.authInvoiceControbutorService.getInvoices({statuses: statuses, keyword: this.keyword})}),
     takeUntil(this.ngUnsubscribe)).subscribe(result => {
-      if (result ) {
+      if (result) {
         this.allInvoices = result['result'];
         if (result['meta']) {
+          this.numberOfAllItems = result['meta']['numberOfTotal'];
+          this.numberOfCurrentTotalItems = result['meta']['numberOfTotal'];
           this.numberOfNewInvoices = result['meta']['numberOfNewInvoices'];
           this.numberOfPaidInvoices = result['meta']['numberOfPaidInvoices'];
           this.numberOfInProgressInvoices = result['meta']['numberOfInProgressInvoices'];
@@ -118,5 +133,12 @@ export class AllInvoicesComponent implements OnInit {
   }
   trackInvoiceId(index: number, invoiceReceipt: Invoice) {
     return invoiceReceipt._id;
+  }
+  navigate(event) {
+    this.router.navigate([], { queryParams: {page: event}, queryParamsHandling: 'merge' });
+  }
+  ngOnDestroy() {
+    this.ngUnsubscribe.next();
+    this.ngUnsubscribe.complete();
   }
 }
