@@ -339,7 +339,41 @@ a.secondary{
     color: white;
     background-color: #b71c1c;
 }
+.col-xs-5ths,
+.col-sm-5ths,
+.col-md-5ths,
+.col-lg-5ths {
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
 
+.col-xs-5ths {
+    flex: 0 0 20%;
+    max-width: 20%;
+}
+
+@media (min-width: 768px) {
+    .col-sm-5ths {
+        flex: 0 0 20%;
+        max-width: 20%;
+    }
+}
+
+@media (min-width: 992px) {
+    .col-md-5ths {
+        flex: 0 0 20%;
+        max-width: 20%;
+    }
+}
+
+@media (min-width: 1200px) {
+    .col-lg-5ths {
+        flex: 0 0 20%;
+        max-width: 20%;
+    }
+}
 
 @media(max-width: 992px){
     body{
