@@ -7,6 +7,7 @@
 - 2021-01-01                                -
 ---------------------------------------------
 .: WSM: BugFix: Fixed existing promotion active date and expiry date issue (WSM-252)
+.: WSM: BugFix: Fixed promotion active date  validation and lazyload (WSM-250)
 
 ---------------------------------------------
 - 2020-12-30                                -
